// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`default-log-level-test global allows filtering messages that do not meet a priority threshold (unless overridden) 1`] = `
Map {
  "NONE" => Array [],
  "DEBUG" => Array [],
  "INFO" => Array [],
  "WARN" => Array [
    Array [
      "[2] [93mWARN test-context Should also show up[39m",
      "WARN",
      "test-context",
    ],
  ],
  "ERROR" => Array [
    Array [
      "[1] [97m[101mERROR test-context Should show up[49m[39m",
      "ERROR",
      "test-context",
    ],
  ],
}
`;

exports[`default-log-level-test transport can have a different log level allows filtering messages that do not meet a priority threshold (unless overridden) 1`] = `
Map {
  "NONE" => Array [],
  "DEBUG" => Array [],
  "INFO" => Array [],
  "WARN" => Array [],
  "ERROR" => Array [
    Array [
      "[1] [101m[97mERROR test-context Should show up[39m[49m",
      "ERROR",
      "test-context",
    ],
  ],
}
`;
